# FlorrBt

./: .clang-format  .gitignore  CMakeLists.txt  FlorrBt.Client.vcxproj  FlorrBt.Client.vcxproj.filters  FlorrBt.EngineShared.vcxproj  FlorrBt.EngineShared.vcxproj.filters  FlorrBt.Server.vcxproj  FlorrBt.Server.vcxproj.filters  FlorrBt.Web.vcxproj  FlorrBt.Web.vcxproj.filters  FlorrBt.slnx  FlorrBt.vcxproj  FlorrBt.vcxproj.filters  README.md
.github/workflows/: build-server.yml
data/: accounts.json  server.cfg
data/maps/: ant_hel.tmj  garden.tmj  training_grounds.tmj  waiting_room.tmj
data/tiles/: shipwreck_tileset.tsj
deploy/windows/: README.txt  deploy.cmd  deploy.ps1  package_zip.ps1  server.cfg.example
deploy/windows-web/: README.txt  install_web_task.cmd  install_web_task.ps1  open_firewall.ps1  open_firewall_admin.cmd  start_web.cmd  start_web.ps1  web.env.ps1
src/Client/: client.cpp  test.py
src/Engine/: account_data.cpp  account_data.h  commands_registry.h  console.cpp  console.h  json_value.cpp  json_value.h  logger.h  map_tools.h  spatial_hash_grid.h  tmj_parser.cpp  tmj_parser.h
src/Server/: commands.cpp  main.cpp  report.cpp  report.h  server.cpp  server.h
src/Server/Game/: controller.h  entity.cpp  entity.h  entity_tools.cpp  gamecontext.cpp  gamecontext.h  gamecontroller.h  gameworld.cpp  gameworld.h  player.cpp  player.h  state.h  state_zone.cpp  state_zone.h  talent.h  zone_mob_tools.h
src/Server/Game/controllers/: melee_controller.cpp  melee_controller.h  player_controller.cpp  player_controller.h
src/Server/Game/entities/: blood_sacrifice_ritual.cpp  blood_sacrifice_ritual.h  drop.cpp  drop.h  flower.cpp  flower.h  mob.cpp  mob.h  mob_behavior.cpp  portal.cpp  portal.h  projectile.cpp  projectile.h
src/Server/Game/entities/petals/: petal.cpp  petal.h  petal_behavior.cpp  petal_slot.h  petals_behavior.h
src/Server/Game/gamecontrollers/: opencontroller.cpp  opencontroller.h  waitingcontroller.cpp  waitingcontroller.h
src/Server/Game/states/: states.cpp  states.h
src/Server/Game/systems/: player_lifecycle_service.cpp  player_lifecycle_service.h  snapshot_service.cpp  snapshot_service.h
src/Server/Module/: console_module.cpp  console_module.h  module.h  network_module.cpp  network_module.h  server_gui_module.cpp  server_gui_module.h  world_module.cpp  world_module.h
src/Shared/: commands.cpp  damage_type.h  drop_rate.h  fonts.h  game_config.h  inventory.h  mob_type.cpp  mob_type.h  network_msg.h  petal_card_exp.h  petal_type.h  rarity.h  shared.h  spatial_hash_grid.cpp  spatial_hash_grid.h  stats.h  talent_type.h  tools.h
tools/: load_test_clients.py  web_client_server.js
web/: README.md  index.html  null_preview.html  styles.css
web/data/maps/: training_grounds.tmj
web/data/tiles/: stone_bridge_rect_tileset.tsj
web/src/: app_context.js  bee_sprite.js  beetle_sprite.js  chat_ui.js  client_config.js  client_settings.js  console_ui.js  game.js  game_ids.js  garden_mob_sprite.js  ladybug_sprite.js  map_renderer.js  mobile_controls.js  protocol.js  scene_passes.js  soldier_ant_sprite.js  spider_sprite.js  talent_data.js
